--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "freealut-1.1.0.tar.bz2": e6283498cda8f7a35bbe00d13957e7882a82fc55
+  "freealut-1.1.0.tar.gz": b2c04d2b5e0896b3164c01deda39f58933c8055f
